--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="hero">
-            <img src="nha-san-bac-ho.jpg" alt="Hình ảnh nhà sàn Bác Hồ" class="hero-img">
+            <img src="2.png" alt="Hình ảnh nhà sàn Bác Hồ" class="hero-img">
             <h1>mô hình nhà sàn Bác Hồ</h1>
             <p class="subtitle">Di tích lịch sử | Biểu tượng | Cảm hứng</p>
             <a href="#about" class="btn">Tìm hiểu thêm</a>
