--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;background:#f5f3e7;" role="main" aria-label="Trang QR nhà sàn Bác Hồ">
         <h1 style="color:#222;margin-bottom:24px;" id="title">nhà sàn Bác Hồ</h1>
         <a href="info.html" aria-label="Chuyển đến trang thông tin mô hình nhà sàn Bác Hồ">
-            <img src="1.png" alt="Mã QR dẫn đến trang thông tin mô hình nhà sàn Bác Hồ" style="width:260px;height:260px;box-shadow:0 2px 12px #e6b80033;border-radius:16px;" role="img">
+            <img src="image/1.png" alt="Mã QR dẫn đến trang thông tin mô hình nhà sàn Bác Hồ" style="width:260px;height:260px;box-shadow:0 2px 12px #e6b80033;border-radius:16px;" role="img">
         </a>
     </main>
 </body>
