--- a/info.html
+++ b/info.html
@@ -53,7 +53,7 @@
         <section id="video">
             <h2>Video giới thiệu</h2>
             <div class="video-container">
-                <iframe width="100%" height="400" src="https://www.youtube.com/embed/1QGJkQvA2nA" title="Giới thiệu nhà sàn Bác Hồ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="400" src="video/3.mp4" title="Giới thiệu nhà sàn Bác Hồ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <button onclick="speakContent()" style="margin:16px auto;display:block;padding:12px 32px;border-radius:30px;background:#e6b800;color:#222;font-weight:bold;cursor:pointer;">🔊 Đọc nội dung</button>
     </main>
