--- a/info.html
+++ b/info.html
@@ -50,6 +50,15 @@
                 <li>Di tích được bảo tồn và tôn vinh</li>
             </ul>
         </section>
+        <section id="gallery">
+    <h2>Hình ảnh mô hình Lăng Bác</h2>
+    <div class="gallery-container">
+        <img src="image/2.jpg" alt="Mô hình Lăng Bác - góc chính diện">
+        <img src="image/4.jpg" alt="Mô hình Lăng Bác - góc nghiêng">
+        <img src="image/5.jpg" alt="Mô hình Lăng Bác - toàn cảnh">
+        <img src="image/6.jpg" alt="Mô hình Lăng Bác - toàn cảnh">
+    </div>
+</section>
         <section id="video">
             <h2>Video giới thiệu</h2>
             <div class="video-container">
